--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="fr">
     <head>
-      <title>Quête GIT</title>
+      <title>Quête GIT part1</title>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
     </head>
